syntax = "proto3";

package category;

message Category {
  int32 id = 1;
  string description = 2;
}

message CategoryID {
  int32 id = 1;
}

message CategoryList {
  repeated Category categories = 1;
}

message Empty {}

service CategoryService {
  rpc List (Empty) returns (CategoryList);
}