syntax = "proto3";

import "./user.proto";
import "./product.proto";

package order;

message Order {
  int32 id = 1;
  double totalPrice = 2;
  user.User user = 3;
  product.ProductList products = 4;
}

message Empty {}

service OrderService {
  rpc List (Empty) returns (ProductList);
}