syntax = "proto3";

package user;

message User {
  string id = 1;
  string name = 2;
  string cellphone = 3;
  string address = 4;
}

message Empty {}

service UserService {
  rpc Add (User) returns (Empty);
}
